# CMC8401_JacquardControl

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-windows.yml
cmake/: mingw-w64-x86_64.cmake
src/: MainWindow.cpp  MainWindow.h  SimulationEngine.cpp  SimulationEngine.h  main.cpp
src/pages/: AlarmResetPage.cpp  AlarmResetPage.h  FactorySettingsPage.cpp  FactorySettingsPage.h  GradientModePage.cpp  GradientModePage.h  IntermittentModePage.cpp  IntermittentModePage.h  ManualDebugPage.cpp  ManualDebugPage.h  StandardModePage.cpp  StandardModePage.h
src/widgets/: SidePanel.cpp  SidePanel.h  StatusBar.cpp  StatusBar.h  TitleBar.cpp  TitleBar.h
